wiwi data record (unsolved model integration)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,5 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "Capstone_VR.sln"
+    "dotnet.defaultSolution": "Project-VR-1.sln"
 }
